Updated and cleaned up, now consistent with RT Interlock and Interlock FPGA

--- a/Builds/Interlock 32T Network Client.ini
+++ b/Builds/Interlock 32T Network Client.ini
@@ -1,12 +1,10 @@
-[Interlock 32T Network Client]
+[Interlock 32T Network Client.app]
 server.app.propertiesEnabled=True
 server.ole.enabled=True
 server.tcp.paranoid=True
 server.tcp.serviceName="My Computer/"
 server.vi.callsEnabled=True
 server.vi.propertiesEnabled=True
-WebServer.TcpAccess="c+*"
-WebServer.ViAccess="+*"
+WebServer.Enabled=False
 DebugServerEnabled=False
 DebugServerWaitOnLaunch=False
-
